--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
   <meta name="og:title" content="test">
   <meta name="description" content="Starter project for Angular apps that exports to the Angular CLI">
   <meta name="twitter:image" content="https://c.staticblitz.com/assets/icon-664493542621427cc8adae5e8f50d632f87aaa6ea1ce5b01e9a3d05b57940a9f.png">
-  <script src="https://cdn.ckeditor.com/4.10.1/full/ckeditor.js"></script>
-
+  <script src="https://cdn.ckeditor.com/4.9.2/full-all/ckeditor.js"></script>
+  <script> CKEDITOR.config.forcePasteAsPlainText = true; </script>
 </head>
 <body>
   <app-root></app-root>
